<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="learned_time">学习时间: %s</string>
    <string name="rememberTimes_count">认识%d次</string>
    <string name="blurTimes_count">模糊%d次</string>
    <string name="forgetTimes_count">忘记%d次</string>

    <string name="word_explain">释义</string>
    <string name="example_sentences">例句</string>
    <string name="phrases">短语/固定搭配</string>
    <string name="affix">词缀</string>
    <string name="prefix">前缀</string>
    <string name="root">词根</string>
    <string name="suffix">后缀</string>
    <string name="word_form_info">词形变化</string>
    <string name="study_history">学习历史</string>
    <string name="generate_mnemonic">生成助记</string>
    <string name="forget">忘了</string>
    <string name="blur">模糊</string>
    <string name="remember">认识</string>

    <string name="vocabulary_book">单词本</string>
    <string name="add">添加</string>
    <string name="click_to_change">点击修改</string>
    <string name="learning">待学习</string>
    <string name="learning_vocabulary">当前学习</string>
    <string name="mastered">已掌握</string>
    <string name="my_group">我的分组</string>
    <string name="review_word_count_today">已复习</string>
    <string name="reviewing">复习中</string>
    <string name="search_word">搜索单词</string>
    <string name="study_progress">学习进度: </string>
    <string name="study_word_count_today">已新学</string>
    <string name="study_word_per_day">每日新学</string>
    <string name="today_goal">今日目标</string>
    <string name="today_review_word">今日复习</string>
    <string name="word">词</string>
    <string name="all_word">所有单词 %d</string>
    <string name="learning_count">待学习: %d</string>
    <string name="reviewing_count">复习中: %d</string>
    <string name="mastered_count">已掌握: %d</string>
    <string name="join_learning">加入学习</string>
    <string name="cancel_learning">取消学习</string>
    <string name="change_vocabulary_ook">修改单词本</string>
    <string name="add_remove_words">添加/移除单词</string>
    <string name="delete_vocabulary_book">删除单词本</string>
    <string name="add_new_vocabulary">添加新单词本</string>
    <string name="name">名称:</string>
    <string name="description">描述:</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>

    <string name="ai_thinking">AI思考中……</string>
    <string name="communicate_with_ai">与AI对话</string>
    <string name="no_vocabulary">当前还未选择词汇，请前往单词本选择词汇</string>
    <string name="reciteWordFinish">今日目标已完成，请明日再来吧！</string>
    <string name="recite_word_not_started">今天还没有要背诵的任务</string>
    <string name="get_ai_mnemonic_error">获取 AI 助记失败，请稍后再试</string>
    <string name="getting_Ai_mnemonic">正在生成AI助记…</string>
    <string name="choose_vocabulary_book">选择单词本</string>
    <string name="total_count">总词汇: %d</string>
    <string name="setting_title_api_key">API key</string>
    <string name="number_of_words_learned_per_day">每日学习单词数量</string>
    <string name="date_interval_pick">选择日期</string>
    <string name="light_dark_model">日夜模式</string>

    <string name="learning_trends">学习趋势</string>
    <string name="average_daily_study_time">平均学习时长:</string>
    <string name="minute">分钟</string>
    <string name="total_learning_time">总学习时长:</string>
    <string name="new_learned_word">新学单词:</string>
    <string name="reviewed_word">复习单词:</string>
    <string name="click_to_view_word_definition">点击查看单词释义</string>
</resources>
