<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/setting_title_api_key"
            android:textSize="@dimen/text_size_title_medium"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/titleDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:dividerColor="?attr/colorOutlineVariant" />
    </LinearLayout>

    <EditText
        android:id="@+id/apiKeyET"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:minHeight="80dp"
        android:padding="16dp"
        android:backgroundTint="@android:color/transparent"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/apiKeyET">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:dividerColor="?attr/colorOutlineVariant" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_size_body_medium" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                app:dividerColor="?attr/colorOutlineVariant" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/confirm"
                android:textColor="?attr/colorOnSurface" />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>