<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">
    <LinearLayout
        android:id="@+id/affixTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affix"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="@dimen/text_size_body_medium" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/affixContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/affixTitle">
        <!--前缀-->
        <LinearLayout
            android:id="@+id/prefixRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:text="@string/prefix"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurface"
                android:background="@drawable/bg_corner_small"
                android:backgroundTint="?attr/colorPrimaryContainer"/>
            <TextView
                android:id="@+id/prefixName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurface" />
            <TextView
                android:id="@+id/prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurfaceVariant" />
        </LinearLayout>
        <!--词根-->
        <LinearLayout
            android:id="@+id/rootRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:text="@string/root"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurface"
                android:background="@drawable/bg_corner_small"
                android:backgroundTint="?attr/colorPrimaryContainer"/>
            <TextView
                android:id="@+id/rootName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurface" />
            <TextView
                android:id="@+id/root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurfaceVariant" />
        </LinearLayout>
        <!--后缀-->
        <LinearLayout
            android:id="@+id/suffixRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:text="@string/suffix"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurface"
                android:background="@drawable/bg_corner_small"
                android:backgroundTint="?attr/colorPrimaryContainer"/>
            <TextView
                android:id="@+id/suffixName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurface" />
            <TextView
                android:id="@+id/suffix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/text_size_body_medium"
                android:textColor="?attr/colorOnSurfaceVariant" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>