<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/date_interval_pick"
            android:textSize="@dimen/text_size_title_medium"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/titleDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:dividerColor="?attr/colorOutlineVariant" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2">
        <com.kite.mnemoai.ui.widget.wheelwidget.WheelView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/colon"/>
        <com.kite.mnemoai.ui.widget.wheelwidget.WheelView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timePicker">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:dividerColor="?attr/colorOutlineVariant" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_size_body_medium" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                app:dividerColor="?attr/colorOutlineVariant" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/confirm"
                android:textColor="?attr/colorOnSurface" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>